Bug #22666
rgw: cannot link a bucket to a tenanted user
Start date:
01/11/2018
Due date:
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Description
current radosgw-admin link commands will fail to find a bucket when transferring to a tenanted user, as the command will try to find the bucket under the tenant first, also new linking will have to then modify the bucket entry to the new id under tenant.
History
#1 Updated by Matt Benjamin 4 months ago
- Status changed from New to In Progress